Replace sample plugin with code that runs TailwindCSS on the vault and outputs to a snippet

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,8 @@
     "importHelpers": true,
     "isolatedModules": true,
 	"strictNullChecks": true,
+	"allowSyntheticDefaultImports": true,
+	"resolveJsonModule": true,
     "lib": [
       "DOM",
       "ES5",
