--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
-	"id": "obsidian-sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.0",
+	"id": "unofficial-obsidian-tailwindcss-plugin",
+	"name": "Unofficial TailwindCSS Plugin",
+	"version": "0.0.1",
 	"minAppVersion": "0.15.0",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"description": "This is a plugin that enables usage of TailwindCSS in your Obsidian vault",
+	"author": "Nicholas Wilcox",
+	"authorUrl": "https://github.com/nicholas-wilcox",
 	"isDesktopOnly": false
 }
