--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
 		"obsidian": "latest",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
+	},
+	"dependencies": {
+		"autoprefixer": "^10.4.14",
+		"postcss": "^8.4.24",
+		"tailwindcss": "^3.3.2"
 	}
 }
