--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"name": "Unofficial TailwindCSS Plugin",
 	"version": "0.0.1",
 	"minAppVersion": "0.15.0",
-	"description": "This is a plugin that enables usage of TailwindCSS in your Obsidian vault",
+	"description": "Use TailwindCSS utility classes in your markup.",
 	"author": "Nicholas Wilcox",
 	"authorUrl": "https://github.com/nicholas-wilcox",
 	"isDesktopOnly": false
