--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^16.11.6",
+		"@types/postcss-prefix-selector": "^1.15.0",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
@@ -24,6 +25,7 @@
 	"dependencies": {
 		"autoprefixer": "^10.4.14",
 		"postcss": "^8.4.24",
+		"postcss-prefix-selector": "^1.16.0",
 		"tailwindcss": "^3.3.2"
 	}
 }
