--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
 	"name": "obsidian-sample-plugin",
-	"version": "0.1.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"version": "0.2.0",
+	"description": "This is an Obsidian plugin for using TailwindCSS utility classes",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
 	},
-	"keywords": [],
-	"author": "",
+	"keywords": [ "Obsidian", "TailwindCSS", "PostCSS" ],
+	"author": "Nicholas Wilcox <nwilcox@linicks.dev>",
+	"repository": {
+		type: "git",
+		url: "https://github.com/nicholas-wilcox/unofficial-tailwindcss-obsidian-plugin.git"
+	},
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^16.11.6",
