--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "obsidian-sample-plugin",
-	"version": "0.2.2",
+	"version": "0.3.0",
 	"description": "This is an Obsidian plugin for using TailwindCSS utility classes",
 	"main": "main.js",
 	"scripts": {
@@ -8,7 +8,11 @@
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
 	},
-	"keywords": [ "Obsidian", "TailwindCSS", "PostCSS" ],
+	"keywords": [
+		"Obsidian",
+		"TailwindCSS",
+		"PostCSS"
+	],
 	"author": "Nicholas Wilcox <nwilcox@linicks.dev>",
 	"repository": {
 		"type": "git",
