Use correct value for plugin name that is also the name of the release archive

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ on:
       - "*"
 
 env:
-  PLUGIN_NAME: ${{ github.event.repository.name }}
+  PLUGIN_NAME: unofficial-tailwindcss-plugin
 
 jobs:
   build:
