--- a/package.json
+++ b/package.json
@@ -20,15 +20,15 @@
 	},
 	"license": "MIT",
 	"devDependencies": {
-		"@types/node": "^16.11.6",
+		"@types/node": "^22.0.0",
 		"@types/postcss-prefix-selector": "^1.15.0",
-		"@typescript-eslint/eslint-plugin": "5.29.0",
-		"@typescript-eslint/parser": "5.29.0",
-		"builtin-modules": "3.3.0",
-		"esbuild": "0.17.3",
+		"@typescript-eslint/eslint-plugin": "^7.18.0",
+		"@typescript-eslint/parser": "^7.18.0",
+		"builtin-modules": "^4.0.0",
+		"esbuild": "^0.23.0",
 		"obsidian": "latest",
-		"tslib": "2.4.0",
-		"typescript": "4.7.4"
+		"tslib": "^2.6.3",
+		"typescript": "^5.5.4"
 	},
 	"dependencies": {
 		"autoprefixer": "^10.4.14",
