--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
+		"predev": "cp node_modules/tailwindcss/lib/css/preflight.css .",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
+		"prebuild": "cp node_modules/tailwindcss/lib/css/preflight.css .",
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
 	},
 	"keywords": [
