Add tests and properly ignore vault workspace files

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,15 @@ data.json
 # Exclude preflight stylesheet copied from tailwindcss package
 preflight.css
 
+# Exclude most test vault workspace files
+Test\ Vault/.obsidian/app.json
+Test\ Vault/.obsidian/appearance.json
+Test\ Vault/.obsidian/core-plugins-migration.json
+Test\ Vault/.obsidian/core-plugins.json
+Test\ Vault/.obsidian/graph.json
+Test\ Vault/.obsidian/workspace.json
+
 # Exclude files that are copied into or generated in test vault
 Test\ Vault/.obsidian/plugins/unofficial-tailwindcss-plugin
 Test\ Vault/.obsidian/snippets/tailwind.css
+
