--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	},
 	"license": "MIT",
 	"devDependencies": {
+		"@types/debug": "^4.1.12",
 		"@types/node": "^22.0.0",
 		"@types/postcss-prefix-selector": "^1.15.0",
 		"@typescript-eslint/eslint-plugin": "^7.18.0",
@@ -34,6 +35,7 @@
 	},
 	"dependencies": {
 		"autoprefixer": "^10.4.14",
+		"debug": "^4.3.6",
 		"postcss": "^8.4.24",
 		"postcss-prefix-selector": "^1.16.0",
 		"tailwindcss": "^3.3.2"
